--- a/QuickCommand/package.json
+++ b/QuickCommand/package.json
@@ -2,6 +2,12 @@
 	"name": "quickcommand",
 	"displayName": "QuickCommand",
 	"description": "quick run configured commands",
+	"author": "kjtang",
+	"publisher": "kjtang",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/KJTang/VSCodeThings/tree/master/QuickCommand"
+	}, 
 	"version": "0.0.1",
 	"engines": {
 		"vscode": "^1.41.0"
