simplesearch: update desc

--- a/SimpleSearch/package.json
+++ b/SimpleSearch/package.json
@@ -1,7 +1,7 @@
 {
     "name": "simplesearch",
     "displayName": "SimpleSearch",
-    "description": "no desc",
+    "description": "quick search configured things",
     "version": "0.0.2",
     "author": "kjtang",
     "publisher": "kjtang",
